# spectrogram-soul

./: .pre-commit-config.yaml  LICENSE  README.md  inference.py  pyproject.toml  setup.cfg  train_utils.py
emo_service/api/: bot_main.py  bot_run.py
emo_service/api/bot/: filters.py  handlers.py  inference.py  settings.py
voice/: file_17.oga
